# bumblebees

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  README.md  WASM-README.md  WASM_BUILD_GUIDE.md  build-wasm.sh  game.html  highscores.txt  ten.wasm
resources/: hit.xmp  hummel_icns_temp_i.icns  shoot.xmp
src/: constants.rs  game_state.rs  highscore.rs  lib.rs  logger.rs  main  main.rs  rendering.rs
src/entities/: bullet.rs  enemy.rs  mod.rs  player.rs
src/systems/: collision.rs  mod.rs  wave.rs
