[package]
name = "ten"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "Hummel"
identifier = "com.mcschied.hummel"
icon = ["assets/icon.icns"] 
resources = ["resources"]   

[dependencies]
ggez = "0.9.3"
rand = "0.9.0"
winit = { version = "0.30.9", features = ["serde"] }
log = "0.4"
fern = "0.6"
chrono = "0.4"




